remove map temporary

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -139,7 +139,7 @@
         </div>
     </div>
 
-    
+<!--     
 
 <script src="/js/map.js"></script>
 
@@ -151,7 +151,7 @@
 
   // Initialize map
   initMap(lat, lon, locationName);
-</script>
+</script> -->
 
    
     
