changes at map system

--- a/views/listings/add.ejs
+++ b/views/listings/add.ejs
@@ -115,6 +115,38 @@
     </div>
         </div>
 
+        <div class="row">
+          <div class="col-md-5 my-2">
+            <label for="lat" class="form-label"
+              >latitude<i class="fa-solid fa-asterisk"></i
+            ></label>
+            <input
+              type="number"
+              class="form-control"
+              name="lat"
+              id=""
+              step="any"
+              placeholder="ex:88.145"
+              required
+            />
+          </div>
+
+          <div class="col-md-7 my-2">
+            <label for="lon" class="form-label"
+              >longitude<i class="fa-solid fa-asterisk"></i
+            ></label>
+            <input
+              type="number"
+              class="form-control"
+              name="lon"
+              id=""
+              step="any"
+              placeholder="ex:88.414"
+              required
+            />
+          </div>
+        </div>
+
         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
           <button class="btn my-4 edit-btn">Add</button>
         </div>
