--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -139,19 +139,19 @@
         </div>
     </div>
 
-<!--     
+   
 
 <script src="/js/map.js"></script>
 
 <script>
   // Pass EJS variables to your external JS
-  const lat = <%- lat %>;
-  const lon = <%- lon %>;
-  const locationName = "<%- locationName %>";
+  const lat = <%- item.lat %>;
+  const lon = <%- item.lon %>;
+  const locationName = "<%- item.location %>";
 
   // Initialize map
   initMap(lat, lon, locationName);
-</script> -->
+</script> 
 
    
     
