--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -61,6 +61,38 @@
       Enter a valid location.
     </div>
        </div>
+
+       <div class="row">
+          <div class="col-md-5 my-2">
+            <label for="lat" class="form-label"
+              >latitude<i class="fa-solid fa-asterisk"></i
+            ></label>
+            <input
+              type="number"
+              class="form-control"
+              name="lat"
+              id=""
+              step="any"
+              value="<%=data.lat%>"
+              required
+            />
+          </div>
+
+          <div class="col-md-7 my-2">
+            <label for="lon" class="form-label"
+              >longitude<i class="fa-solid fa-asterisk"></i
+            ></label>
+            <input
+              type="number"
+              class="form-control"
+              name="lon"
+              id=""
+              step="any"
+              value="<%=data.lon%>"
+              required
+            />
+          </div>
+        </div>
         
         
 
