--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -141,7 +141,7 @@
 
    
 
-<script src="/js/map.js"></script>
+<script src="/JS/map.js"></script>
 
 <script>
   // Pass EJS variables to your external JS
