--- a/views/layouts/boilarplate.ejs
+++ b/views/layouts/boilarplate.ejs
@@ -14,10 +14,13 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 
 
     <link rel="stylesheet" href="/CSS/rating.css">
     <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/CSS/booking.css">
 </head>
 <body>
     <%- include("../includes/navbar.ejs")%>
