--- a/views/bookings/bookings.ejs
+++ b/views/bookings/bookings.ejs
@@ -49,7 +49,7 @@
     
 </div>
 
-   <button class="btn booking-btn" type="submit">Book</button>
+   <button class="btn booking-btn" type="submit">Pay & Book</button>
 <br><br>
    </form>
 
